@@ -38,12 +38,12 @@ sub _tableHeader
     my @tableDesc = (
         new EBox::Types::Boolean(
             fieldName     => 'blanketBlock',
-            printableName => __('Block not listed domains'),
+            printableName => __('Block not listed domains and URLs'),
             defaultValue     => 0,
             editable         => 1,
-            help         => __('If this option is enabled, ' .
-                               'any domain which is not present in the ' .
-                                '<i>Domains rules</i> nor in the <i>Domain list files</i> sections below will be ' .
+            help         => __('If this is enabled, ' .
+                                   'any domain or URL which is neither present neither in the ' .
+                                '<i>Domains and URLrules</i> nor in the <i>Domain list files</i> sections below will be ' .
                                 'forbidden.'),
 
                               ),
